--- a/conky.rc
+++ b/conky.rc
@@ -11,7 +11,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     use_xft = true,
-    font = 'Sans Mono:size=8',
+    font = 'Sans Mono:size=8:color=black',
     gap_x = 5,
     gap_y = 50,
     minimum_height = 5,
@@ -52,7 +52,7 @@ ${offset 15}${font}${color FFFDE2}Procs:$color $processes  ${color FFFDE2}Run:$c
 #Red
 ${font Entopia:bold:size=10}${color green}NETWORK ${hr 2}${font}
 ${offset 15}${color}IPv4 Addr ${color red}${alignr}${addr enp8s0}
-$color$▼ ${downspeed enp8s0}${alignc}${color green} IPv4${alignr}${color}▲ ${upspeed enp8s0}
+$color▼ ${downspeed enp8s0}${alignc}${color green} IPv4${alignr}${color}▲ ${upspeed enp8s0}
 ${color black}${downspeedgraph enp8s0 32,80 ff0000 0000ff}${color black}${upspeedgraph enp8s0 32,80 0000ff ff0000}
 ${offset 15}${color green}${font}▼ $color${totaldown enp8s0} ${alignr}${color green}▲ $color${totalup enp8s0}
 ${offset 5}${font Entopia:bold:size=10}${color orange}${wireless_essid wlp3s0} ${stippled_hr 1}
@@ -67,13 +67,19 @@ ${offset 15}${color FF7878}${top name 1} ${alignr}${top pid 1}   ${top cpu 1}   
 ${offset 15}${color FF7878}${top name 2} ${alignr}${top pid 2}   ${top cpu 2}     ${top mem 2}
 ${offset 15}${color FF7878}${top name 3} ${alignr}${top pid 3}   ${top cpu 3}     ${top mem 3}
 ${offset 15}${color FF7878}${top name 4} ${alignr}${top pid 4}   ${top cpu 4}     ${top mem 4}
-#Fecha y hora
-${alignc}${time %I:%M:%S}
-${alignc}${time %A, %B %e, %Y}
 #Sistema de ficheros
 ${font Entopia:bold:size=10}${color red}FILE SYSTEM ${hr 2}${font}
 ${offset 15}${color}dev ${alignr}FREE     USED
 ${offset 15}${color}root (${fs_type /}) ${color yellow}${alignr}${fs_free /} ${fs_used /}
 ${offset 15}${color black}${diskiograph /dev/sda 32,240 a0af00 00110f}
 ${offset 15}${color yellow}${fs_size /} ${color}${fs_bar 6 /}
+#Spotify
+${if_running spotify}${font Entopia:bold:size=10}${color green}Spotify (${exec ~/.config/conky/spotify/status.sh}) ${hr 2}${font}
+${exec ~/.config/conky/spotify/cover.sh}${image ~/.config/conky/spotify/cover.jpg -p 0,590 -s 60x60 -n}
+${offset 70}Title: ${exec ~/.config/conky/spotify/title.sh}
+${offset 70}Artist: ${exec ~/.config/conky/spotify/artist.sh}
+${offset 70}Album: ${exec ~/.config/conky/spotify/album.sh}${voffset 10}${endif}
+#Fecha y hora
+${font}${alignc}${time %H:%M:%S}
+${alignc}${time %A, %B %e, %Y}
 ]]
